<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/custom_card"
            >


            <TextView
                android:id="@+id/textViewTimeOfUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/text_view_now"
                android:textColor="@color/color_black"
                android:textSize="30sp"
                android:textStyle="italic"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <ImageView
                android:id="@+id/imageViewStatus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:contentDescription="@string/image_weather"
                android:outlineAmbientShadowColor="@color/color_black"
                app:layout_constraintEnd_toEndOf="@+id/textViewTimeOfUpdate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTimeOfUpdate"
                app:srcCompat="@drawable/sun" />

            <TextView
                android:id="@+id/textViewCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/name_of_city"
                android:textColor="@color/color_black"
                android:textSize="40sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/precipitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:text="@string/chance_of_precipitation"
                android:textColor="@color/color_black"
                app:layout_constraintStart_toEndOf="@+id/textViewTemperature"
                app:layout_constraintTop_toTopOf="@+id/textViewTemperature" />

            <TextView
                android:id="@+id/textViewWind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/speed_of_wind"
                android:textColor="@color/color_black"
                android:layout_marginTop="10dp"


                app:layout_constraintBottom_toBottomOf="@+id/textViewTemperature"
                app:layout_constraintStart_toStartOf="@+id/precipitation"
                app:layout_constraintTop_toBottomOf="@+id/precipitation"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textViewPrecipitationValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14dp"



                android:text="@string/wind_value"
                android:textColor="@color/color_black"
                app:layout_constraintBottom_toBottomOf="@+id/precipitation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/precipitation"
                app:layout_constraintTop_toTopOf="@+id/precipitation" />

            <TextView
                android:id="@+id/textViewWindValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14dp"
                android:text="@string/wind_value"

                android:textColor="@color/color_black"
                app:layout_constraintBottom_toBottomOf="@+id/textViewWind"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewWind"
                app:layout_constraintTop_toTopOf="@+id/textViewWind" />

            <TextView
                android:id="@+id/textViewTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/temperature"
                android:textColor="@color/color_black"
                android:textSize="60sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewStatus"
                app:layout_constraintStart_toEndOf="@+id/imageViewStatus"
                app:layout_constraintTop_toTopOf="@+id/imageViewStatus" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textViewCityName"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="searchOnClick"
                app:layout_constraintTop_toTopOf="@+id/textViewCityName"
                app:srcCompat="@android:drawable/ic_search_category_default" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>